# modelscope

./: .gitignore  pyproject.toml
Agent/: README.md  mcp_agent.py  min_agent.py  skill_agent.py
DSPy/: optimize_fewshot.py
Harness/: README.md  __init__.py  cli.py  config.py  eval.py  logging_utils.py  prompts.py  runner.py  schema.py  tools.py  workflow.py
Harness/examples/: sample_task.json  tool_task.json  workflow_sample.json  workflow_step_01.json  workflow_step_02.json
Harness/templates/: system_prompt.md  task_prompt.md  workflow_prompt.md
LangChain/: README.md  quickstart.py
LangGraph/: README.md  hello_world.py  quickstart.py
MCP/minimal-mcp-python/: README.md  mcp.json  pyproject.toml
MCP/minimal-mcp-python/src/minimal_mcp_python/: server.py
Qwen/: Qwen3.5-397B-A17B.py
Skills/: README.md
Skills/resume-generator/: SKILL.md
Skills/self-intro/: SKILL.md
Skills/skill-template/: SKILL.md
