[project]
name = "minimal-mcp-python"
version = "0.1.0"
description = "A minimal MCP server template (Python + uv)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp",
]

[project.scripts]
minimal-mcp-python = "minimal_mcp_python.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minimal_mcp_python"]
